Fix horizontal scrolling issue

--- a/assets/src/scss/_kahoycrafts.scss
+++ b/assets/src/scss/_kahoycrafts.scss
@@ -133,6 +133,13 @@ body.home {
         }
     }
 
+    /* Fix issue with horizontal scrolling */
+    @media only screen and (min-width: 1024px) {
+        &.no-sidebar .entry-content .alignfull {
+            margin-right: calc((-100vw + 15px) / 2 + 100% / 2);
+        }
+    }
+
     /* Hide slider navigation elements when offscreen */
     .wp-block-columns.alignfull.home-slider {
         overflow: hidden;
